[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Spritesheet/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://Actor/Zombie/Bomber.gd" type="Script" id=2]
[ext_resource path="res://Intersection/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 320.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.1043
height = 15.2605

[node name="Bomber" type="KinematicBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 27
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 459.111, 86.397, 27.8889, 46.4919 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.6, 1.6 )
shape = SubResource( 1 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[node name="VisionBuffer" type="Area2D" parent="."]
monitorable = false

[node name="ChaseCollision" type="CollisionShape2D" parent="VisionBuffer"]
shape = SubResource( 2 )

[node name="Vision" type="Area2D" parent="."]
monitorable = false

[node name="WanderCollision" type="CollisionPolygon2D" parent="Vision"]
position = Vector2( -12.6417, 0 )
scale = Vector2( 0.903646, 1 )
polygon = PoolVector2Array( -16, -24, 320, -128, 352, -64, 368, 0, 352, 64, 320, 128, -16, 24 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 12.6448, -1.96909 )
shape = SubResource( 3 )

[connection signal="body_exited" from="VisionBuffer" to="." method="_on_VisionBuffer_body_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_Hurtbox_body_exited"]

[editable path="Hurtbox"]
